<resources>

    <string name="tuichorus_create_theme">%s\'s room</string>
    <string name="tuichorus_room_theme">Subject</string>
    <string name="tuichorus_room_theme_limit">Subject</string>
    <string name="tuichorus_tv_the_anchor_name_is_still_looking_up">Getting anchor name</string>
    <string name="tuichorus_warning_room_name_too_long">Room name is too long</string>
    <string name="tuichorus_send">Send</string>
    <string name="tuichorus_dialog_cancel">Cancel</string>
    <string name="tuichorus_btn_confirm">Confirm</string>
    <string name="tuichorus_warning_not_empty">The input field must not be empty!</string>
    <string name="tuichorus_delete">delete</string>
    <string name="tuichorus_tips_open_audio">Please turn on the microphone permission first</string>
    <string name="tuichorus_room_id">Room Id: %d</string>
    <string name="tuichorus_lock">Lock</string>
    <string name="tuichorus_unlock">UnLock</string>
    <string name="tuichorus_tv_seat_id">Mic No.%s</string>
    <string name="tuichorus_btn_start_record">Start Record</string>
    <string name="tuichorus_btn_stop_record">Stop Record</string>
    <string name="tuichorus_tv_the_position_has_muted">Seat %d muted</string>
    <string name="tuichorus_tv_the_position_has_unmuted">Seat %d unmuted</string>
    <string name="tuichorus_tv_the_owner_ban_this_position">Seat %d locked</string>
    <string name="tuichorus_tv_the_owner_not_ban_this_position">Seat %d unlocked</string>
    <string name="tuichorus_toast_accept_request_failure">Failed to accept the request: %d</string>
    <string name="tuichorus_tv_online_no_name">took seat %d</string>
    <string name="tuichorus_tv_offline_no_name">left seat %d</string>
    <string name="tuichorus_tv_enter_room">%s entered</string>
    <string name="tuichorus_tv_exit_room">%s left the room</string>
    <string name="tuichorus_anchor_leave_room">The room will close after you leave. Leave?</string>
    <string name="tuichorus_request_expired">The request has expired</string>
    <string name="tuichorus_agree">Agree</string>
    <string name="tuichorus_toast_owner_succeeded_in_occupying_the_seat">Seat taken successfully</string>
    <string name="tuichorus_toast_owner_failed_to_occupy_the_seat">Failed to take a seat [%1$d]:%2$s</string>
    <string name="tuichorus_apply_seat_ask">Mic on</string>
    <string name="tuichorus_toast_exit_the_room_successfully">Left room</string>
    <string name="tuichorus_toast_enter_the_room_successfully">Entered room</string>
    <string name="tuichorus_toast_enter_the_room_failure">Failed to enter room[%1$d]:%2$s</string>
    <string name="tuichorus_toast_list_has_not_been_initialized">The seat list has not been initialized！</string>
    <string name="tuichorus_leave_seat">Mic Off</string>
    <string name="tuichorus_toast_the_room_is_not_ready">Room not ready~</string>
    <string name="tuichorus_toast_application_has_been_sent_please_wait_for_processing">Your request has been sent. Please wait for reply from the anchor.</string>
    <string name="tuichorus_toast_failed_to_send_application">Failed to send request:%s</string>
    <string name="tuichorus_toast_position_is_already_occupied">The seat is taken</string>
    <string name="tuichorus_toast_position_is_locked_cannot_enter_seat">Cannot take the seat as it is locked</string>
    <string name="tuichorus_toast_offline_successfully">Mic turned off</string>
    <string name="tuichorus_toast_offline_failure">Failed to turn mic off: %s</string>
    <string name="tuichorus_toast_you_are_already_an_anchor">You are an anchor now</string>
    <string name="tuichorus_msg_invite_you_to_chat">The anchor invited you to take seat %d</string>
    <string name="tuichorus_msg_apply_for_chat">requested to take seat %d</string>
    <string name="tuichorus_tv_apply_for_chat">Request to Speak</string>
    <string name="tuichorus_seat_closed">The seat is blocked</string>
    <string name="tuichorus_accept_failed">Failed to accept request</string>
    <string name="tuichorus_msg_close_room">Room closed</string>
    <string name="tuichorus_toast_please_enter_content">Enter content</string>
    <string name="tuichorus_toast_sent_successfully">Sent</string>
    <string name="tuichorus_toast_sent_message_failure">Failed to send message</string>
    <string name="tuichorus_leave_seat_and_exit_ask">Are you sure you want to leave seat and exit the room?</string>
    <string name="tuichorus_leave_seat_ask">Are you sure to leave seat</string>

    <string name="tuichorus_toast_anchor_can_only_operate_it">Only owner can operate!</string>
    <string name="tuichorus_me">Me</string>
    <string name="tuichorus_audience">Audience</string>
    <string name="tuichorus_tv_invite">Invite</string>
    <string name="tuichorus_toast_refuse_to_chat">%s declined the mic-on request</string>
    <string name="tuichorus_msg_you_refuse_to_chat">You declined the mic-on request</string>
    <string name="tuichorus_toast_chorus_can_not_leave_seat">You cannot leave your seat when in a duet</string>

    <string name="tuichorus_create_room_limit">The cloud communication account you are currently using has not activated the Chorus function, and the number of rooms created exceeds the limit, please go to the Tencent Cloud official website to open Chorus，地址：https://cloud.tencent.com/document/product/269/11673</string>
    <string name="tuichorus_create_or_join_group_limit">The number of groups that a single user can create and join exceeds the limit, please purchase relevant packages, more details：https://cloud.tencent.com/document/product/269/11673</string>
    <string name="tuichorus_group_member_limit">The number of group members exceeds the limit, please refer to it, please purchase the relevant packages, more details：https://cloud.tencent.com/document/product/269/11673</string>
    <string name="tuichorus_welcome_visit">"Welcome to the Duet tryout. To quickly use the feature, visit: "</string>
    <string name="tuichorus_welcome_visit_link">"https://cloud.tencent.com/document/product/647/61859"</string>

    <string name="tuichorus_start_chorus">Join</string>
    <string name="tuichorus_btn_choose_song">Request</string>
    <string name="tuichorus_btn_choosed_song">Requested</string>
    <string name="tuichorus_manager_ordered_song"> Manage Songs</string>
    <string name="tuichorus_msg_order_song_seat">Mic No.%d</string>
    <string name="tuichorus_msg_order_song">Request《%s》</string>
    <string name="tuichorus_singer">Singer: %s</string>
    <string name="tuichorus_no_song">No songs requested</string>
    <string name="tuichorus_btn_start_chorus">Start Duet</string>

    <string name="tuichorus_gift_title">Gift</string>
    <string name="tuichorus_gift_send_out">Sent</string>
    <string name="tuichorus_gift_send">send%s</string>
    <string name="tuichorus_gift_charge">charge</string>
    <string name="tuichorus_gift_give_gift">giving</string>
    <string name="tuichorus_gift_game_currency">money%d</string>

    <string name="tuichorus_sound_effects">Sound effect settings</string>
    <string name="tuichorus_sound_audition">Music</string>
    <string name="tuichorus_put_on_your_headphones">Use earphones for better experience</string>
    <string name="tuichorus_sounds_adjustment">Music tone</string>
    <string name="tuichorus_music_volume">Music volume</string>
    <string name="tuichorus_mic_volume">Voice volume</string>
    <string name="tuichorus_changer">Voice changing</string>
    <string name="tuichorus_reverb">Reverb</string>
    <string name="tuichorus_no_effect">No effect</string>
    <string name="tuichorus_audio_change_type_child">Naughty boy</string>
    <string name="tuichorus_audio_change_type_luoli">Little girl</string>
    <string name="tuichorus_audio_change_type_dashu">Middle-aged man</string>
    <string name="tuichorus_audio_change_type_kongling">Ethereal voice</string>
    <string name="tuichorus_audio_reverb_type_ktv">Karaoke room</string>
    <string name="tuichorus_audio_reverb_type_lowdeep">Deep</string>
    <string name="tuichorus_audio_reverb_type_heavymetal">Metallic</string>
    <string name="tuichorus_audio_reverb_type_hongliang">Resonant</string>

    <!--网络状态-->
    <string name="tuichorus_network_quality_good">Good</string>
    <string name="tuichorus_network_quality_General">Fair</string>
    <string name="tuichorus_network_quality_poor">Weak</string>
    <string name="tuichorus_network_quality_none">Unknown</string>
    <string name="tuichorus_tips_start_audio">Please turn on the microphone permission first</string>
    <string name="tuichorus_permission_mic_reason_title">%s applies for access to the microphone</string>
    <string name="tuichorus_permission_mic_reason">Needs access to your microphone, and it can be used for functions such as Interactive Video Streaming, Show Live, Video Call, Group Video Call, Multi-person audio and video room, etc.</string>
</resources>