<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tuichorus_bg_bottom_dialog"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <View
        android:id="@+id/line_top_separator"
        android:layout_width="32dp"
        android:layout_height="4dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/tuichorus_bg_separate_line"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/audio_main_ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/line_top_separator">

        <TextView
            android:id="@+id/music_effect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tuichorus_sound_effects"
            android:textColor="@color/tuichorus_white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/link_music"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="3dp"
            android:src="@drawable/tuichorus_ic_link_music"
            app:layout_constraintBottom_toBottomOf="@+id/music_effect"
            app:layout_constraintLeft_toRightOf="@+id/music_effect"
            app:layout_constraintTop_toTopOf="@+id/music_effect" />


        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_ids="link_music,cl_listen_test,cl_music_volume_change,cl_music_voice,
                    cl_music_tone_change,tv_reverb,rv_audio_reverb_type" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_listen_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/music_effect">

            <TextView
                android:id="@+id/tv_listen_test"
                style="@style/TUIChorusAudioEffetcTextStyle"
                android:text="@string/tuichorus_sound_audition"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_listen_hint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tuichorus_put_on_your_headphones"
                android:textColor="@color/tuichorus_white"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/switch_music_audition"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@+id/tv_listen_test"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_music_audition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:thumb="@drawable/tuichorus_ic_switch"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintStart_toEndOf="@+id/tv_listen_hint"
                app:layout_constraintTop_toTopOf="parent"
                app:track="@drawable/tuichorus_ic_switch_track" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_music_volume_change"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            app:layout_constraintTop_toBottomOf="@+id/cl_listen_test">

            <TextView
                android:id="@+id/tv_bgm_title"
                style="@style/TUIChorusAudioEffetcTextStyle"
                android:text="@string/tuichorus_music_volume" />

            <SeekBar
                android:id="@+id/sb_bgm_volume"
                style="@style/TUIChorusAudioEffectSeekBarStyle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/tv_bgm_title"
                app:layout_constraintRight_toLeftOf="@+id/tv_bgm_volume"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_bgm_volume"
                style="@style/TUIChorusAudioEffetcNumStyle"
                app:layout_constraintRight_toRightOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_music_voice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            app:layout_constraintTop_toBottomOf="@+id/cl_music_volume_change">

            <TextView
                android:id="@+id/tv_mic_title"
                style="@style/TUIChorusAudioEffetcTextStyle"
                android:text="@string/tuichorus_mic_volume" />

            <SeekBar
                android:id="@+id/sb_mic_volume"
                style="@style/TUIChorusAudioEffectSeekBarStyle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/tv_mic_title"
                app:layout_constraintRight_toLeftOf="@+id/tv_mic_volume"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_mic_volume"
                style="@style/TUIChorusAudioEffetcNumStyle"
                app:layout_constraintRight_toRightOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_music_tone_change"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            app:layout_constraintTop_toBottomOf="@+id/cl_music_voice">

            <TextView
                android:id="@+id/sb_pitch_title"
                style="@style/TUIChorusAudioEffetcTextStyle"
                android:text="@string/tuichorus_sounds_adjustment" />

            <SeekBar
                android:id="@+id/sb_pitch_level"
                style="@style/TUIChorusAudioEffectSeekBarStyle"
                android:progress="50"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/sb_pitch_title"
                app:layout_constraintRight_toLeftOf="@+id/tv_pitch_level"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_pitch_level"
                style="@style/TUIChorusAudioEffetcNumStyle"
                android:text="0"
                app:layout_constraintRight_toRightOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_change"
            style="@style/TUIChorusAudioEffetcTextStyle"
            android:text="@string/tuichorus_changer"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/cl_music_tone_change" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_audio_change_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_change" />

        <TextView
            android:id="@+id/tv_reverb"
            style="@style/TUIChorusAudioEffetcTextStyle"
            android:text="@string/tuichorus_reverb"
            app:layout_constraintTop_toBottomOf="@+id/rv_audio_change_type" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_audio_reverb_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_reverb" />

        <View
            android:id="@+id/bottom_line"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@color/tuichorus_transparent"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/rv_audio_reverb_type" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>